# zadanieNatalia

./: CMakeLists.txt
shaders/: phong.frag  phong.vert
src/: ObjLoader.cpp  ObjLoader.h  Shader.h  main.cpp
